Rule11 rework (#15)
* Upgrade from jdk 21 to 25

* Basic native code invocation skeleton

* Basic working version

* Upgrade to a newer version of graalvm gradle plugin for compatibility with java sdk 25. Enable native access in the generated exe

* Add reachability metadata

* Reworked Rule 11. Native compiled exe works but only in the current directory

* Revised wrapper such that the dll is searched for in the .exe directory.

* Remove gson as a dependency

* Version bump

* Fix to pass CICID checks

* Upgrade Java toolchains to version 25. Package the lychee compiled library alongside madrlint

* Jbang now requires java sdk 25 or newer

* Enable native access on jbang to avoid warnings.

* Add build step for Rust before invoking gradlew for jbang smoke test and build.

* Add extraction to temp folder hack for compiled rust dll

* Final changes